--- a/src/Component/fullmenu/full-menu.style.css
+++ b/src/Component/fullmenu/full-menu.style.css
@@ -44,15 +44,24 @@
   font-size: 30px;
   color: #222;
   transition: 0.3s;
-  padding: 5px 0;
-}
-
-.menu__item {
+  position: relative;
+  display: inline-block;
   padding: 10px 0;
 }
 
-.menu__item a:hover {
-  border-bottom: 5px solid #222;
+.menu__item a:before {
+  content: "";
+  width: 0;
+  height: 2px;
+  background: #676567;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.menu__item a:hover:before {
+  width: 100%;
 }
 
 .menu-close {
