--- a/src/Component/newarivals/newArivals.css
+++ b/src/Component/newarivals/newArivals.css
@@ -2,7 +2,7 @@
   width: 90vw;
   margin: 70px auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
   grid-auto-rows: minmax(20vh, 28vh);
   grid-auto-flow: dense;
   grid-gap: 25px;
@@ -48,17 +48,36 @@
   transition: 0.4s;
   transform: scale(1);
 }
-
-.content {
+.gallery .grid-item .content {
   position: absolute;
-  bottom: 0;
+  bottom: 15px;
   left: 0;
   height: 30%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.5);
   color: #fff;
+  padding: 0 30px;
+  font-weight: 500;
 }
 
 .grid-item:hover .background {
-  transform: scale(1.3);
+  transform: scale(1.1);
+}
+.gallery .grid-item .content h1 {
+  font-size: 34px;
+  color: #fff;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.gallery .grid-item .content a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.gallery .grid-item .content a:hover {
+  color: #d3122a;
 }
