--- a/src/Component/fullmenu/full-menu.style.css
+++ b/src/Component/fullmenu/full-menu.style.css
@@ -10,7 +10,7 @@
   z-index: 999;
   opacity: 1;
   background: rgba(255, 255, 255, 0.9);
-  transition: 0.3s;
+  transition: left 0.8s;
 }
 
 .overlay__menu_hidden {
@@ -19,6 +19,7 @@
   top: 50%;
   height: 0;
   opacity: 0;
+  z-index: -999;
 }
 
 .menu-close {
