--- a/src/Component/header/header.style.css
+++ b/src/Component/header/header.style.css
@@ -7,4 +7,10 @@
 }
 .header_container {
   box-shadow: 0 0 3px #ddd;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+  background: #fff;
 }
