--- a/src/Component/newarivals/newArivals.css
+++ b/src/Component/newarivals/newArivals.css
@@ -1,83 +1,61 @@
-.gallery {
-  width: 90vw;
-  margin: 70px auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-  grid-auto-rows: minmax(20vh, 28vh);
-  grid-auto-flow: dense;
-  grid-gap: 25px;
-}
-.grid-item {
-  overflow: hidden;
-  cursor: pointer;
+.carousel-container-home {
+  width: 100vw;
+  margin: 0 auto;
+  height: 100vh;
   position: relative;
 }
-.grid-item:nth-of-type(1),
-.grid-item:nth-of-type(5),
-.grid-item:nth-of-type(9),
-.grid-item:nth-of-type(11) {
-  grid-row: span 2;
+.footer .menu__item a {
+  font-size: 20px;
 }
-/* .grid-item:nth-of-type(2) {
-    grid-row: 2span 1;
-  } */
-.grid-item:nth-of-type(3),
-.grid-item:nth-of-type(7) {
-  grid-row: span 3;
-}
-.grid-item:nth-of-type(4),
-.grid-item:nth-of-type(10) {
-  /* grid-column: 2 / span 1; */
-  grid-row: span 3;
-}
-/* .grid-item:nth-of-type(6) {
-    grid-column: 3 / span 1;
-    grid-row: 4 / span 1;
-  } */
-.grid-item > img {
+.single-item-home {
+  height: 80vh;
   width: 100%;
-  height: 100%;
+  position: relative;
+}
+
+.single-item-home img {
   object-fit: cover;
-}
-.background > img {
-  background-size: cover;
-}
-
-.background {
-  height: 100%;
-  transition: 0.4s;
-  transform: scale(1);
-}
-.gallery .grid-item .content {
-  position: absolute;
-  bottom: 15px;
-  left: 0;
-  height: 30%;
   width: 100%;
-  color: #fff;
-  padding: 0 30px;
-  font-weight: 500;
+  height: 100%;
+}
+.carousel-container-home .carousel-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80px;
+  height: 80px;
+  transform: translate(-50%, -50%);
 }
 
-.grid-item:hover .background {
-  transform: scale(1.1);
-}
-.gallery .grid-item .content h1 {
-  font-size: 34px;
+.slider-content {
+  position: absolute;
+  bottom: 5%;
+  left: 35%;
+  z-index: 6;
+  transform: translate(-50%, -50%);
   color: #fff;
-  font-weight: 500;
+  backdrop-filter: blur(30px);
+  height: 130px;
+  padding: 25px;
+}
+button.slick-arrow.slick-next {
+  position: absolute;
+  right: 3%;
+  top: 50%;
+}
+
+button.slick-arrow.slick-prev {
+  position: absolute;
+  z-index: 5;
+  left: 3%;
+  top: 50%;
+}
+a.shop-now {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+}
+.slider-content h1 {
+  color: #fff;
   text-transform: capitalize;
-}
-
-.gallery .grid-item .content a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition: 0.5s;
-}
-
-.gallery .grid-item .content a:hover {
-  color: #d3122a;
 }
