--- a/src/Component/header/header.style.css
+++ b/src/Component/header/header.style.css
@@ -1,10 +1,3 @@
-.header {
-  display: flex;
-  width: 96vw;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding: 20px;
-}
 .header_container {
   box-shadow: 0 0 3px #ddd;
   position: fixed;
@@ -13,4 +6,9 @@
   width: 100%;
   z-index: 9;
   background: #fff;
+  padding: 21px 0;
+}
+.logo {
+  display: flex;
+  justify-content: center;
 }
